# chromakopia

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: publish-crate.yml  release-plz.yml
docs/superpowers/plans/: 2026-03-24-framebuffer-renderer-v2.md  2026-03-24-improved-terminal-color-detection.md
examples/: ascii_art.rs  breathe.rs  cinematic.rs  cycle.rs  demo.rs  emerge.rs  fade_in.rs  fb_demo.rs  flap.rs  flap_fade.rs  glitch.rs  glow.rs  karaoke.rs  layers.rs  license.rs  loading.rs  moon.rs  neon.rs  petscii.rs  plasma.rs  pulse.rs  radar.rs  rainbow.rs  scroll.rs  sequence.rs  settle.rs  showcase.rs  starfield.rs  theme_adaptive.rs
src/: color.rs  gradient.rs  lib.rs  presets.rs  terminal.rs
src/animate/: easing.rs  effects.rs  fb_effects.rs  framebuffer.rs  mod.rs  scene.rs
