[package]
name = "chromakopia"
version = "0.1.0"
edition = "2021"
description = "Beautiful terminal string gradients and animations for Rust"
license = "MIT"
repository = "https://github.com/jpwesselink/chromakopia"
homepage = "https://github.com/jpwesselink/chromakopia"
keywords = ["terminal", "color", "gradient", "animation", "cli"]
categories = ["command-line-interface"]

[dependencies]
colored = "3"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time", "sync", "macros"] }
rand = "0.9"
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[[example]]
name = "demo"
path = "examples/demo.rs"

[[example]]
name = "fb_demo"
path = "examples/fb_demo.rs"
